<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- MAIN Activity Strings (Preferences) -->
    <string name="app_name">SMS2Mail</string>
    <string name="title_enable">Enabled</string>
    <string name="summary_enable">Enable sms forwarding to e-mail</string>
    <string name="title_email">E-mail</string>
    <string name="summary_email">Destination e-mail address</string>
    <string name="cat_gmail">GMail account configuration</string>
    <string name="title_gmail">User login</string>
    <string name="summary_gmail">Enter your gmail\'s username</string>
    <string name="title_gmailpwd">Password</string>
    <string name="summary_gmailpwd">Enter your gmail\'s password</string>
    <!-- Menu  -->
    <string name="menu_test">"Configuration test"</string>
    <string name="menu_help">"Help"</string>
    <string name="menu_quit">"Quit"</string> 
    <string name="help_txt">"Help not yet available, sorry !"</string>
    
    <!-- TEST DE CONFIGURATION -->
    <!-- E-MAIL de Test -->
    <string name="test_mail_subject">SMS2Email : configuration test</string>
    <string name="test_mail_body">If SMS2Email is enabled, your sms will be forwarded directly to this e-mail address if there is data connectivity !</string>
    <!-- Toast message  -->
    <string name="test_ok">Check if you receive the test e-mail from GMAIL to your address EMAIL</string>
    <string name="test_notok">Error in the GMAIL\'s configuration : MSG</string>
    <string name="test_nodata">You have to input all data !</string>
    <string name="test_bar">Sending mail for testing purpose !</string>
    
    <!-- SMS Subject -->
    <string name="sms_subject">SMS from </string>    
    
</resources>
